--- a/LPC/templates/vm_top_perf.html
+++ b/LPC/templates/vm_top_perf.html
@@ -9,9 +9,11 @@
 
     <script src="{% static 'easyui/jquery.min.js' %}"></script>
     <script src="{% static 'easyui/jquery.easyui.min.js' %}"></script>
+    <script src="{% static 'easyui/datagrid-groupview.js' %}"></script>
+
 
     {#  jquery valid js#}
-    <script src="{% static 'jquery/validate/jquery.validate.js' %}" type="text/javascript"></script>
+{#    <script src="{% static 'jquery/validate/jquery.validate.js' %}" type="text/javascript"></script>#}
     <script src="{% static 'jquery/validate/messages_cn.js' %}" type="text/javascript"></script>
 
     <script src="{% static 'echarts/echarts.min.js' %}"></script>
@@ -27,62 +29,154 @@
         })
         function doSearch(){
 
-            $("#signupForm").validate({
-                submitHandler: function(form) {
-                    $('#vm_tt').datagrid('load',{
-                        counter_name:$('#counter_name').combobox('getValue')
+            if($('#bdt').datebox('getValue')!='' && $('#edt').datebox('getValue')!='')
+            {
+                $('#vm_tt').datagrid('load',{
+                    counter_name:$('#counter_name').combobox('getValue'),
+                    order:$('#order').combobox('getValue'),
+                    sortby:$('#sortby').combobox('getValue'),
+                    limit:$('#limit').combobox('getValue'),
+                    bdt:$('#bdt').datebox('getValue'),
+                    edt:$('#edt').datebox('getValue')
 
-                    });
-                }
-            });
+                });
+            }else{
+                alert('please input valid date')
+            }
+
         }
         function doClear(){
             $('#signupForm').form('clear');
+        }
+
+        function myformatter(date){
+            var y = date.getFullYear();
+            var m = date.getMonth()+1;
+            var d = date.getDate();
+            return y+'-'+(m<10?('0'+m):m)+'-'+(d<10?('0'+d):d);
+        }
+        function myparser(s){
+            if (!s) return new Date();
+            var ss = (s.split('-'));
+            var y = parseInt(ss[0],10);
+            var m = parseInt(ss[1],10);
+            var d = parseInt(ss[2],10);
+            if (!isNaN(y) && !isNaN(m) && !isNaN(d)){
+                return new Date(y,m-1,d);
+            } else {
+                return new Date();
+            }
         }
 
     </script>
 </head>
 <body>
 
-<form id="signupForm" method="get" action="">
-    <span>counter_name:</span>
-    <select id="counter_name" class="easyui-combobox" name="state" style="width:200px;">
-        <option value="cpu_util">cpu_util</option>
-        <option value="memory.usage">memory.usage</option>
-        <option value="network.incoming.bytes.rate">network.incoming.bytes.rate</option>
-        <option value="network.outgoing.bytes.rate">network.outgoing.bytes.rate</option>
-        <option value="volume.read.bytes.rate">volume.read.bytes.rate</option>
-        <option value="volume.write.bytes.rate">volume.write.bytes.rate</option>
-    </select>
+    <table>
+        <tr>
+            <td>
+                <span>begin date:</span>
+                <input id="bdt" class="easyui-datebox" data-options="formatter:myformatter,parser:myparser"></input>
+            </td>
+            <td>
+                <span>end date:</span>
+                <input id="edt" class="easyui-datebox" data-options="formatter:myformatter,parser:myparser"></input>
 
-    <input class="submit" type="submit" value="search" onclick="doSearch()"/>
-    <input class="clear" type="button" value="clear" onclick="doClear()"/>
+            </td>
+            <td>
+                <span>counter_name:</span>
+                <select id="counter_name" class="easyui-combobox" name="state" style="width:200px;">
+                    <option value="cpu_util">cpu_util</option>
+                    <option value="memory.usage">memory.usage</option>
+                    <option value="network.incoming.bytes.rate">network.incoming.bytes.rate</option>
+                    <option value="network.outgoing.bytes.rate">network.outgoing.bytes.rate</option>
+                    <option value="volume.read.bytes.rate">volume.read.bytes.rate</option>
+                    <option value="volume.write.bytes.rate">volume.write.bytes.rate</option>
+                </select>
+            </td>
+            <td>
+                <span>orderby</span>
+                <select id="sortby" class="easyui-combobox" name="state" style="width:200px;">
+                    <option value="avg">avg</option>
+                    <option value="max">max</option>
+                </select>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <span>sortby</span>
+                <select id="order" class="easyui-combobox" name="state" style="width:200px;">
+                    <option value="aesc">正序</option>
+                    <option value="desc">倒序</option>
+                </select>
+            </td>
+            <td>
+                <span>top n:</span>
+                <select id="limit" class="easyui-combobox" name="state" style="width:200px;">
+                    <option value="10">10</option>
+                    <option value="20">20</option>
+                    <option value="30">30</option>
+                    <option value="40">40</option>
+                    <option value="50">50</option>
+                    <option value="60">60</option>
+                    <option value="70">70</option>
+                    <option value="80">80</option>
+                    <option value="90">90</option>
+                    <option value="100">100</option>
 
-</form>
+                </select>
+            </td>
+            <td>
+                <input class="submit" type="submit" value="search" onclick="doSearch()"/>
+                <input class="clear" type="button" value="clear" onclick="doClear()"/>
+            </td>
+        </tr>
+    </table>
 
 
-<table id="vm_tt" class="easyui-datagrid"
-         url="/LPC/findTopPerfStatics" toolbar="#tb"
-        title="Load Data" iconCls="icon-save"
-        rownumbers="true">
+<table id="vm_tt" class="easyui-datagrid" data-options="
+                url:'/LPC/findTopPerfStatics',
+                singleSelect:true,
+                collapsible:true,
+                rownumbers:true,
+                fitColumns:false,
+                view:groupview,
+                groupField:'resource_id',
+                groupFormatter:function(value,rows){
+                    return value + ' - ' + rows.length + ' Item(s)';
+                }
+            ">
 {#         pagination="true">#}
-        {% csrf_token %}
+{#        {% csrf_token %}#}
 
     <thead>
         <tr>
             <th field="resource_name" >resource_name</th>
-            <th field="user_id" >user_id</th>
-            <th field="counter_name" >counter_name</th>
-            <th field="resource_id" >resource_id</th>
-            <th field="timestamp" >timestamp</th>
+            <th field="project_name" width="100" >project_name</th>
+            <th field="vm_state" >vm_state</th>
+            <th field="vcpus" >vcpus</th>
+            <th field="memory_mb" >memory_mb</th>
+            <th field="host" sortable="true" >host</th>
+{#            <th field="root_gb" >root_gb</th>#}
+{#            <th field="image" >image</th>#}
             <th field="avg" >avg</th>
-            <th field="unit" >unit</th>
-            <th field="count" >count</th>
             <th field="max" >max</th>
             <th field="min" >min</th>
-            <th field="sum" >sum</th>
+{#            <th field="sum" >sum</th>#}
+{#            <th field="unit" >unit</th>#}
+
+            <th field="user_id" >user_id</th>
+{#            <th field="counter_name" >counter_name</th>#}
+            <th field="resource_id" width="100">resource_id</th>
+            <th field="timestamp" >timestamp</th>
+{#            <th field="count" >count</th>#}
+
+            <th field="launched_at" >launched_at</th>
+{#            <th field="scheduled_at" >scheduled_at</th>#}
+{#            <th field="terminated_at" >terminated_at</th>#}
+{#            <th field="deleted" >deleted</th>#}
             <th field="period_start" >period_start</th>
-            <th field="period_end" >period_start</th>
+            <th field="period_end" >period_end</th>
         </tr>
     </thead>
 </table>
